css/style.css
/*Ensure HTML5 Elements are shown in older browsers.*/
header, section, footer, aside, nav, main, article, figure {
    display: block; 
}

/* Main body*/
body {
	background-color: #434541;
	font-family: 'Lato', sans-serif;
	color: #EDFFFD;
}

/* Wrapper surrounding all content, inside body */
.wrapper {
    width: 900px;
    display: block;
    margin: 0 auto;
    background-color: #3d3b3f;
    box-shadow: 0 0 10px #000;
}
/**/

/* Title Banner*/
div .bannerdiv {
	display: inline-block;
}

div .leftbanner {
	color: #0F0;
	font-weight: 100;
	font-style: italic;
}

div .rightbanner {
	color: #E5E8E1;
	font-weight: 900;
	font-style: bold;
}

div.banner {
	font-size: 500%;
	color: #0F0;
	padding-left: 50px;
}
/**/

/* Navigational menu*/
nav {
	margin-left: 5%;
	width: 50%;
	color: #888;
	display: block;
	overflow: hidden;
}

nav ul {
	box-sizing: border-box;
	display: block;
    width: 100%;
	margin: 0;
	padding: 0;
}

nav > ul > li {
	border-right: 1px solid #ddd;
	width: auto;
	display: block;
	float: left;
	margin: 0;
}

nav > ul > li:last-child {
	border-right-width: 0;
}

nav > ul > li > a {
	background-color: #eee;
	color: #000;
	display: block;
	padding: .75em 1.5em;
	transition: all .25s ease-in-out;
  	-moz-transition: all .25s ease-in-out;
  	-webkit-transition: all .25s ease-in-out;
}

nav > ul > li > a:hover {
	background-color: #ddd;
	color: #218;
}
/**/


/* Content sections breakdown */
.content {
    padding-top: 10px;
	margin-left: 30px;
    overflow:auto;
}

#leftcontent{
/*	border-right: 2px solid #ddd;*/
	float: left;
	width: 35%;
	overflow: auto;
}

#rightcontent { /* the pattern is drawn in this container */
	float: left;
	width: 60%;
	overflow: hidden;
	padding-left: 10px;
	margin-left: 10px;
	/*background-color: #996633;*/
}

.controller { /* the controls of the pattern editor are here. */
/*	clear: both;*/
/*	overflow: auto;*/
	background-color: #7f007f;
}
	.top-controls, .middle-controls, .bottom-controls {
		padding-top:5px;
	}

	.subsection-title {
		font-family: "Play", "Helvetica", "Verdana";
		font-size: 125%;
		color: #cc66ff;
	}
    .subsection-helper-text {
        padding: 1px 0 1px 0;
        font-family: "Play", "Helvetica", "Verdana";
        font-size: 60%;
        font-style: italic;
        color: #ffff66;
    }

	.slider-container, .div-tesselation-input, .shape-selection-and-text {
		margin: 0px;
		padding: 5px;
		clear: both;
		overflow: hidden;
	}

	.slider-text {
		float: left;
	}

	.slider-controls {
		margin: 4px 10px 0 30px;
		float: left;
		width: 50%;
	}

	.slider-values {
		float: left;
		width: 10%;
		color: #00ff99;
	}

.div-tesselation-input{
    display: inline-block;
}
	/* Usage: <a href="#" class="green-button"><i class="fa fa-pencil"></i></a>*/
	.green-button, #files {
		/* Button container */
		margin: 10px 5px 10px 0px;
		padding: 5px;
		display: inline-block;
		height: 20px;
		width: auto;
		background-color: #333333;
		border: 2px solid #000000;
		/* Text style*/
		color: #33ff00;
		text-align: center;
		/* Fancy effects */
		background: linear-gradient(top, #34696f, #2f5f63);
		background: -webkit-linear-gradient(top, #34696f, #2f5f63);
		border-radius: 1px;
		box-shadow: 0 2px 0 #ccffcc;
		text-shadow: 0 1px 1px rgba(255, 255, 255, 0.2);
	}

	a.green-button {
		text-decoration: none;
        display: block;
        margin-left: auto;
        margin-right: auto;
        width: 40%;
	}

	a.green-button:hover {
		background-color: #666666;
		background: linear-gradient(top, #666666, #333333);
		background: -webkit-linear-gradient(top, #666666, #333333);
	}

/* Source: http://webdesign.tutsplus.com/articles/quick-tip-tooltips-courtesy-of-html5-data-attributes--webdesign-4826   */
    /* <a href="#" class="tooltip" data-tip="this is the tip!">This is the link</a> */
    a.tooltip::before {
        content: attr(data-tip) ;
        font-size: 13px;
        position:absolute;
        z-index: 999;
        white-space:nowrap;
        bottom:9999px;
        left: 50%;
        background:#000;
        color:#e0e0e0;
        padding:0px 7px;
        line-height: 24px;
        height: 24px;

        opacity: 0;
        transition:opacity 0.4s ease-out;
    }
    a.tooltip:hover::before {
        opacity: 1;
        bottom:-35px;
    }
.shapes-form select {
	font-family: 'FontAwesome','Lato';
	color: #00cc66;
}

/* Right content area*/
.final-pattern {
	margin-top: 0px;
}

.section-header { /* Titles of each section */
	font-family: 'Montserrat', 'Eurostile', sans-serif;
	font-size: 150%;
	color: #ccff99;
    margin-bottom: 2px;
}


#raphaelviz {
    border: 1px solid;   
    background: white;
    margin-bottom: 5px;
}

#btnDownloadSvg {
	margin-top: 5px;
	padding: 5px;
	float: right;
}

footer {
	text-align: center;
    clear: both;
}

.controller, .exporter, .importer, .final-pattern {
	/* Material design*/
	background-color: #666666;
	box-shadow: 0 0 7px #aaa;
	border:0px solid #f00;
	padding-left: 10px;
	padding-right: 5px;
    padding-bottom: 1px;
}

